# public-serving-examples

./: pyproject.toml  serve_task_processor.html  serve_task_processor.ipynb  shutdown_replica.ipynb
designs/: serve_bootstrap.excalidraw  stream_processor.excalidraw
dlrm/: app.py  config.py  locustfile.py  model.py  requirements.txt  service.yaml
fastapi_01/: .gitignore  .pre-commit-config.yaml  README.md  STREAMING.md  USAGE.md  docker-compose.yml  fastapi_nlp_api_demo.ipynb  main.py  pyproject.toml  pytest.ini  requirements.txt  serve_config.yaml  serve_test.ipynb  start.sh  start_all.sh  start_poetry.sh
fastapi_01/example_app/: config.py  main.py  telemetry.py  trace_exporter.py
fastapi_01/example_app/api/: middleware.py  models.py  security.py
fastapi_01/example_app/api/v1/: router.py
fastapi_01/example_app/api/v1/endpoints/: classification.py  entities.py  sentiment.py  streaming.py
fastapi_01/example_app/db/: __init__.py  database.py
fastapi_01/example_app/serve/: __init__.py  ingress_deployment.py  serve_config.py
fastapi_01/example_app/serve/deployments/: __init__.py  classification.py  entities.py  sentiment.py  streaming_analyzer.py
fastapi_01/frontend/: README.md  package-lock.json  package.json  tailwind.config.js
fastapi_01/frontend/src/: App.tsx  index.css
fastapi_01/frontend/src/api/: apiClient.ts
fastapi_01/frontend/src/components/: Header.tsx  ProtectedRoute.tsx  Sidebar.tsx
fastapi_01/frontend/src/contexts/: AuthContext.tsx
fastapi_01/frontend/src/pages/: ClassificationPage.tsx  DashboardPage.tsx  EntitiesPage.tsx  LoginPage.tsx  SentimentPage.tsx  StreamingDemo.tsx  WebSocketDemo.tsx
fastapi_01/tests/: conftest.py  test_end_to_end.py
s3_demo_app/: README.md  app.py  app_optimized.py  locustfile.py  requirements.txt
speech-to-text-service/: Dockerfile  README.md  conversation_example.py  requirements.txt  service.yaml  setup.sh  websocket_example.py
