[project]
name = "serve-examples"
version = "0.1.0"
description = ""
authors = [
    {name = "Abrar Sheikh",email = "abrar@anyscale.com"}
]
readme = "README.md"
requires-python = "3.11.11"
dependencies = [
    "jupyterlab (>=4.3.6,<5.0.0)",
    "ray[all] (>=2.43.0,<3.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "torch (>=2.6.0,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "huggingface-hub (>=0.29.3,<0.30.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "gevent (>=24.11.1,<25.0.0)",
    "eventlet (>=0.39.1,<0.40.0)",
    "anyscale (>=0.26.8,<0.27.0)",
    "confluent-kafka (>=2.8.2,<3.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
